@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/terminatorx/terminatorx-3.82.ebuild,v 1.12 2008/04/20 18:28:40 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/terminatorx/terminatorx-3.82.ebuild,v 1.13 2008/05/17 09:26:20 drac Exp $
 
 inherit gnome2 eutils
 
@@ -19,7 +19,7 @@ RDEPEND="alsa? ( >=media-libs/alsa-lib-0.9 )
 	mad? ( media-sound/madplay )
 	vorbis? ( >=media-libs/libvorbis-1.0_beta4 )
 	sox? ( media-sound/sox
-		|| ( media-sound/mpg123 media-sound/mpg321 ) )
+		virtual/mpg123 )
 	>=x11-libs/gtk+-2.2.0
 	>=dev-libs/glib-2.2.0
 	x11-libs/libXi
