@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/terminatorx
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/terminatorx/ChangeLog,v 1.28 2008/04/20 18:28:40 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/terminatorx/ChangeLog,v 1.29 2008/05/17 09:26:20 drac Exp $
+
+  17 May 2008; Samuli Suominen <drac@gentoo.org> terminatorx-3.82.ebuild:
+  Use virtual/mpg123.
 
   20 Apr 2008; Raúl Porcel <armin76@gentoo.org> terminatorx-3.82.ebuild:
   sparc stable
