@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/gqmpeg
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gqmpeg/ChangeLog,v 1.22 2007/08/19 07:56:07 drac Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gqmpeg/ChangeLog,v 1.23 2008/05/17 09:23:59 drac Exp $
+
+  17 May 2008; Samuli Suominen <drac@gentoo.org> gqmpeg-0.91.1.ebuild:
+  Use virtual/mpg123.
 
   19 Aug 2007; Samuli Suominen <drac@gentoo.org> gqmpeg-0.91.1.ebuild:
   Remove USE flag gnome which installed .desktop file to invalid location.
